# chncvrt

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/chncvrt/: __init__.py  constants.py  core.py  split.py
src/chncvrt.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_core.py  test_split.py
